--- a/style.css
+++ b/style.css
@@ -2099,6 +2099,10 @@ input[type="file"]:disabled::-webkit-file-upload-button {
   height: 32px;
 }
 
+body.dark-mode.pink-mode #topBar #logo .logo-center {
+  fill: transparent !important;
+}
+
 #topBar .feature-search {
   flex: 1;
 }
