--- a/style.css
+++ b/style.css
@@ -433,6 +433,9 @@ main.legal-content {
   min-width: var(--form-label-min-width);
   font-weight: 300;
 }
+#setup-config .form-row label {
+  line-height: 1.3;
+}
 .form-row select,
 .form-row input {
   flex: 1;
